# fake-news-detection-system

./: .gitignore  README.md  nginx.conf
.github/workflows/: backend-ec2.yml  deploy-ec2.yml  frontend-s3-cloudfront.yml  ml-service-ec2.yml  ml-service-hf-enterprise.yml
backend/: .dockerignore  Dockerfile  nodemon.json  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.ts  server.ts
backend/src/common/controllers/: error.controller.ts
backend/src/common/middleware/: auth.middleware.ts
backend/src/database/: prisma.ts
backend/src/modules/admin/: admin.controller.ts  admin.routes.ts
backend/src/modules/auth/: auth.controller.ts  auth.routes.ts
backend/src/modules/prediction/: prediction.controller.ts  prediction.routes.ts
deploy/: docker-compose.ec2.yml  ec2.env.example
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Footer.tsx  Navbar.tsx  RouteGuards.tsx  Sidebar.tsx
frontend/src/layouts/: AppLayout.tsx  PublicLayout.tsx
frontend/src/pages/: AboutPage.tsx  AdminDashboard.tsx  AdminLoginPage.tsx  AnalyzePage.tsx  HistoryPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
frontend/src/stores/: authStore.ts  sidebarStore.ts  themeStore.ts
frontend/src/types/: auth.ts  landing.ts  prediction.ts  user.ts
ml-service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
ml-service/agent/: fact_checker.py
